fix background img stretch when window width is small

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -16,10 +16,6 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-html {
-    height: 100%;
-}
-
 body {
     background: url(background.jpg) no-repeat;
     background-color: #193783;
@@ -27,10 +23,13 @@ body {
     color: #EEE;
     font-size: 16px;
     font-family: Arial, serif;
+    margin: 0;
+}
+
+.content {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    margin: 0;
-    min-height: 100%;
 }
 
 a {
